--- a/Frontend/blog/src/assets/css/style.scss
+++ b/Frontend/blog/src/assets/css/style.scss
@@ -3,6 +3,6 @@
 @import './partials/header';
 @import './partials/footer';
 @import './partials/auth';
-
-
-
+@import './partials/maincontent';
+@import './partials/articledetail';
+@import './partials/userdashboard';
