--- a/Frontend/blog/src/assets/css/style.scss
+++ b/Frontend/blog/src/assets/css/style.scss
@@ -6,3 +6,4 @@
 @import './partials/maincontent';
 @import './partials/articledetail';
 @import './partials/userdashboard';
+@import './partials/createarticle';
